2003-06-13  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/clock.c (main): Avoid div-by-zero if mean==0.

	* cdl/time.cdl: build all POSIX files all the time because they
	are used internally by the standard ISO C functions even if not
	exported.
	[Bug 1000001]

2003-04-24  Robert Cragie  <rcc@jennic.com>

	* include/time.inl:
	* include/timeutil.h:
	* src/timeutil.cxx:
	Change return type of cyg_libc_time_itoa() to cyg_ucount8.
	* src/strftime.cxx:
	Change return type of do_format() to cyg_count8.
	These benign changes get around a compiler bug using or32-elf-gcc

2003-03-18  Gary Thomas  <gary@mlbassoc.com>

	* src/strptime.cxx: Initialize time structure to a well known, valid,
	time/date so even if there is an error, it still makes [some] sense.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/time.cdl: Fix doc link.

2003-01-28  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/time.cdl: Correct reference to
	CYGSEM_LIBC_TIME_POSIX_TIME_ROUTINES in CYGPKG_LIBC_TIME_TESTS to
	CYGFUN_LIBC_TIME_POSIX.

2003-01-27  Gary Thomas  <gary@mlbassoc.com>

	* tests/strptime.c: 
	* src/strptime.cxx: 
	* include/time.h: 
	* cdl/time.cdl: Add support for strptime().

2002-05-14  Jesper Skov  <jskov@redhat.com>

	* cdl/time.cdl: Added -Wno-format to the compiler flags. This is
	to avoid warnings about Y2K problems with the format specifiers
	used in the strftime test.

2002-01-09  Nick Garnett  <nickg@redhat.com>

	* tests/clock.c (cyg_start): Added CYG_TEST_INIT() to
	NOTAPPLICABLE version of cyg_start() so that the breakpoints are
	correctly sequenced in the testfarm and it does not think that
	this is a failure.

2001-06-22  Jesper Skov  <jskov@redhat.com>

	* cdl/time.cdl (CYGFUN_LIBC_TIME_SUS_EXTNS): Added.
	* src/strftime.cxx (do_format): Added some Single UNIX
	extensions.

2001-04-25  Bart Veer  <bartv@redhat.com>

	* tests/time.c (MAX_TIMEOUT):
	Increase timeout to cope with fast architectures such as the
	synthetic target.
